--- a/exercice3/exercice.html
+++ b/exercice3/exercice.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <title>JS-Switch</title>
+
 </head>
 <body>
     Name: <input type="text" value="Bill Gates">
 
+    <script src="../exercice1/jquery-3.6.2.min.js"></script>
     <script src="exercice.js"></script>
 </body>
 </html>
