--- a/exercice4/exercice.html
+++ b/exercice4/exercice.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>JS-Switch</title>
+
 </head>
 <body>
     <img id="image" src="img_moustiers-sainte-marie.jpg" width="284" height="213">
 
+    <script src="../exercice1/jquery-3.6.2.min.js"></script>
     <script src="exercice.js"></script>
 </body>
 </html>
