--- a/exercice5/exercice.html
+++ b/exercice5/exercice.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>JS-Switch</title>
+
 </head>
 <body>
     <a href="https://www.google.fr">Google est votre ami</a>
 
+    <script src="../exercice1/jquery-3.6.2.min.js"></script>
     <script src="exercice.js"></script>
 </body>
 </html>
